--- a/SteamDBProjectModeling.ipynb
+++ b/SteamDBProjectModeling.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPKCl/qjRNCT718kcgQWar+",
+      "authorship_tag": "ABX9TyMQe3siiltR77t0ssNrB72Z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -530,6 +530,15 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "A-AuaBG3ag4G"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [
         "\n",
         "# Clean feature list - only features that don't leak target info\n",
@@ -853,6 +862,22 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Summary of Models\n",
+        "The analysis reveals that the Gradient Boosting Classifier is the best model with an F1 score of 0.55, giving the best balance between precision and recall for predicting success. The model has a high Precision of 75.7%, and a relatively low Recall score of 42.8%, showing that it failed to capture half of the 'truly' successful games. This most likely occurs due to the removal of power predictors due to data leakage, but overall performs well.\n",
+        "\n",
+        "The main limitations of the model are due to the class imbalance (only 10% 'successful'), which may have impacted a bias for making 'not successful' class more dominant. The other limitation was data leakage, as many features were heavily intercorrelated, where if given time PCA could have been applied, but as the model stands it was restricted to using early-stage features to make predictions.\n",
+        "\n",
+        "# Room for improvement\n",
+        "\n",
+        "For this project, future efforts should focus on data handling, optimization, and hyperparameter tuning. Grid Search should be the next step to compare models, and also a deeper dive into the importance of certain features, as well as proper handling of intercorrelation beyond just removing them. Feature engineering, particularly for recommendations, Median playtime forever, and Total Reviews, should be done in depth to properly capture appropriate hyperparameters as well."
+      ],
+      "metadata": {
+        "id": "zzi9Vijna6kI"
+      }
     }
   ]
 }
